syntax = "proto3";

package board;

import "user.proto";

service AdAPI {
    rpc GetManyAd (GetManyAdRequest) returns (PaginatedAd);
    rpc GetOneAd (GetByIdWithBoolRequest) returns (Ad);
    rpc SetFavoriteAd (GetByIdRequest) returns (IsSuccess);
    rpc GetFavoriteAds (Empty) returns (RepeatedAdResponse);
    rpc AddAd (ChangeAdRequest) returns (IsSuccess);
    rpc EditAd (ChangeAdRequest) returns (IsSuccess);
    rpc DeleteAd (GetByIdRequest) returns (IsSuccess);
    rpc MuteAd (GetByIdRequest) returns (IsSuccess);
    rpc GetMyAds (Empty) returns (RepeatedAdResponse);
    rpc GetByUserId (GetByIdRequest) returns (RepeatedAdResponse);
}

service CategoryAPI {
    rpc GetAllCategories (Empty) returns (GetAllCategoriesResponse);
}

message GetManyAdRequest {
    FilterQuery filter = 1;
    int32 limit = 2;
    int32 page = 3;
}

message FilterQuery {
    string search = 1;
    int64 price_max = 2 [jstype = JS_NUMBER];
    int64 price_min = 3 [jstype = JS_NUMBER];
    string address = 4;
    Category category = 5;
    string query = 6;
}

message GetByIdRequest {
    string id = 1;
}
message ChangeAdRequest {
    Ad ad = 1;
    repeated ImageProto images = 2;
}
message GetByIdWithBoolRequest {
    string id = 1;
    bool value = 3;
}

message PaginatedAd {
    repeated Ad data = 1;
}

message Ad {
    string id = 1;
    string title = 2;
    int64 price = 3;
    string description = 4;
    bool is_fav = 5;
    bool is_active = 6;
    int32 views = 7;
    string created = 10;
    User user = 11;
    Category category = 12;
    repeated string images = 13;
}
message RepeatedAdResponse {
    repeated Ad data = 1;
}

message GetAllCategoriesResponse {
    repeated Category categories = 1;
}

message Category {
    string id = 1;
    string name = 2;
    string path = 3;
}